client/landing/stylus/app.login-signup.styl
@import "./client/Framework/themes/default/kdfn"
@import "./client/stylus/appfn"

@css {
/*
LOGIN SIGNUP stylesheet
app.login-signup.styl
*/
}

.old-login-screen
  background-image: url("../images/koding-new-bg.png");

// swapping views for views
.kdview.login-screen
  z-index            100
  padding-top        50px
  background-image   none
  gradient           rgba(0, 0, 0, .8), rgba(0, 0, 0, 0)
  top                -100%
  text-align         center
  vendor             transition, top .3s ease-in-out
  abs()
  borderBox()
  &.shown
    top              0

  .flex-wrapper
    background       transparent url("../images/koding-new-bg.png") repeat-x 0 -13px
    size             220px, 342px
    border           1px solid rgba(255,255,255,0.1)
    margin           30px auto 30px auto
    rounded          8px
    shadow           0 10px 40px rgba(0,0,0,0.8)
    bg               color, rgba(255,255,255,0.05)
    vendor           transition, height .1s ease-in-out\,width .4s ease-in-out\, margin .4s ease-in-out
    rel()

  .login-form-holder
  .login-options-holder
  .back-to-login
  .regLink
  .recLink
  .reqLink
  .logLink
  >section
    hidden()

  &.join
    // margin-top            -200px !important

    .logLink
    .regLink
      visible()
    .flex-wrapper
      overflow            visible
      //size                400px, 335px
      height              235px
      &.expanded
        width             400px
        height            310px
        p.request-thanks
          height          140px
          font-size       11px
          iframe
            margin-top    12px
          a:hover
            color         #ffb500
            text-decoration underline

    .rqf
      visible()
      >.kdview
        overflow          visible
      // .kdnotification.mini.register
      //   top               76px!important

  &.login
    // margin-top            -230px !important

    .lf
    .regLink
    .recLink
    .reqLink
    .login-options-holder.log
      visible()

  &.register
    // margin-top            -300px !important

    .rf
    .logLink
    .reqLink
    .login-options-holder.reg
      visible()
    .flex-wrapper
      size                400px, 481px
    &.taller .flex-wrapper
      height              503px

  &.recover
    .rcf
    .logLink
      visible()
    .flex-wrapper
      height              193px
    .rcf .kdnotification.mini.register
      top                 174px!important

  &.reset
    .rsf
    .logLink
      visible()
    .reset-link
      hidden()
    .flex-wrapper
      height              254px

  &.home
    .flex-wrapper
      margin-bottom       30px

  .up-arrow
    display               block
    abs()
    bottom                12px
    left                  50%
    size                  50px,50px
    margin-left           -25px
    border                25px solid transparent
    border-bottom-color   rgba(0,0,0,.3)
    borderBox()
    &:hover
      border-bottom-color rgba(255,255,255,.3)

  a.back-to-home
    display               block
    width                 200px
    margin                30px auto 10px auto
    z-index               1
    opacity               .8
    noTextDeco()
    span::before
      content             '↓'
    &:hover
      opacity             1
      span::before
        content           '↑'
  a
    color                 #ffb500
    noTextDeco()
    &:hover
      color               white

  // .login-lights
  //   abs()
  //   top                   0
  //   left                  0
  //   background            transparent url("../images/bgflare.png") no-repeat center top
  //   size                  100%,416px
  //   z-index               0

  .login-hint
    color                 #B4B3B3
    margin                0 auto 10px auto
    width                 78%
    font-size             11px

  .kdnotification.mini.register
    abs()
    top                   -1px !important
    padding               5px 10px

    .kdnotification-title
      font-size           10px
      line-height         10px
      padding             0
      color               #ccc

      img
        margin            0px 3px 0 0
        vertical-align    bottom
        size              12px, 11px

  .login-footer
    rel()
    size                  300px, auto
    margin                40px auto
    padding               10px
    border                1px solid rgba(255,255,255,0.15)
    rounded               0 0 5px 5px
    bg                    color, rgba(0, 0, 0, .75)
    shadow                0 5px 15px rgba(0,0,0,0.8)
    borderBox()
    p
      color               white
      line-height         24px
      font-size           12px
      color               rgba(255, 255, 255, .75)

.login-box-header
  rel()
  padding                 30px 0 0 0
  text-align              center
  overflow                visible
  height                  98px
  borderBox()
  .betatag
    text-indent           -9999px
    top                   -3px
    right                 -3px
    size                  64px,38px
    bg                    position,-400px -120px
    sprite()
    abs()
    z-index               20002
  .logo
    text-indent           -9999px
    size                  140px,40px
    margin-left           1px
    cursor                pointer
    blockMid()
    sprite()
    bg(position,-400px 0)
  a.back-to-login
    font-size             11px
    abs()
    width                 100%
    bottom                10px
    left                  0
    noTextDeco()

.login-options-holder
  border-top              1px solid rgba(0, 0, 0, 0.1)
  height                  76px
  overflow                visible
  margin-bottom           24px

.kdview.login-screen
  h3
    color                 #b4b3b3
    text-shadow           0 -1px 0 rgba(0, 0, 0, 0.64)
    border                none
    border-top            1px solid rgba(255, 255, 255, 0.1)
    padding               12px 10px 0 10px
    text-align            center !important
    font-size             11px
    line-height           30px
    height                44px
    borderBox()

.login-options
  text-align    center
  margin        0

  li.koding
    bg(position,-440px -80px)
  li.google
    opacity       .35
    cursor        not-allowed
    bg(position,-440px -40px)
    &:hover
      cursor        not-allowed
  li.facebook
    opacity       .35
    cursor        not-allowed
    bg(position,-400px -80px)
    &:hover
      cursor        not-allowed
  li.github
    opacity       .35
    cursor        not-allowed
    bg(position,-400px -40px)
    &:hover
      cursor        not-allowed
  li
    sprite()
    size          32px,32px
    border        1px solid rgba(0, 0, 0, 0.2)
    margin        0 5px
    shadow        inset 0 1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.2)
    rounded       5px
    text-indent   -9999px
    blockMid()
    &.active,
    &:hover
      shadow            0 0 9px rgba(255, 187, 4, 0.66)
      border            1px solid rgba(255, 187, 4, 0.56)
      cursor            pointer
    &:first-child
      margin-left       0
    &:last-child
      margin-right      0

.login-form-holder
  margin-bottom           25px
  padding-bottom          5px
  height                  auto

.login-form

  // section
  //   rel()
  //   margin                40px 0
  //   top                   0
  //   text-align            center
  //   overflow              hidden
  //   p
  //     height              220px
  //     padding             76px 10px
  //     b
  //       font-size         13px
  //       display           block
  //       line-height       28px
  //       text-shadow       0 1px 0 rgba(0,0,0,.5)
  > section
  > div
    rel()
    text-align            center
    .kdview
      width               78%
      margin              0 auto 5px auto
      height              31px

      &.half-size
        display           inline-block
        width             38.5%
        &:first-child
          margin-right    1%

      &.validation-error
        .validation-icon
          bg              position, -80px -480px
          opacity         .3

      &.validation-passed
        .validation-icon
          bg              position, -80px -500px
          opacity         .5

  p
    size              78%, 0
    margin            0 auto
    color             #f2f2f2
    font-size         10px
    line-height       18px
    bg                color, rgba(0, 0, 0, 0.2)
    rounded           4px
    padding           0 6px
    text-shadow       0 1px 0 #111
    overflow          hidden
    vendor            transition, height .15s ease-out
    borderBox()

    h5
      font-size       12px
      font-weight     400
      margin          10px 0

  .password-confirm
    margin-bottom       0!important
    vendor              transition, height .15s ease-out

  input.kdinput.text
    padding             7px 6px 7px 6px
    border              1px solid rgba(0, 0, 0, 0.9)
    color               #444
    font-size           12px
    box-shadow          inset 0 1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.2)
    font-size           11px
    font-weight         600
    height              auto
    line-height         12px
    rounded             4px
    width               100%
    borderBox()
    // &.validation-error
    //   bg                color,#ffe4bf

  input::-webkit-input-placeholder
    color               #666
  input:-moz-placeholder
    color               #666

  .validation-icon
    abs()
    right               5px
    top                 6px
    size                20px,20px
    bg                  position, -80px -480px
    // vendor              transition, opacity .15s ease-out
    opacity             0
    sprite()

  .kdloader.input-loader
    abs()
    right               28px
    top                 8px

  .avatarview
    abs()
    right               69px
    top                 40px
    border              1px solid #ccc
    rounded             2px
    padding             1px
    fl()


  .invitation-field
    rel()
    text-align          left
    color               #B4B3B3
    margin              0 auto
    width               78%
    line-height         36px
    font-size           12px
    overflow            hidden
    border-bottom       1px solid rgba(255,255,255,.15)
    padding-bottom      4px
    margin-bottom       10px
    borderBox()

    .kdview.half-size
      abs()
      right             0
      top               0
      width             49.5%

    span.icon
      bg                position, -480px -80px
      size              40px, 20px
      margin            8px 0 0 2px
      fl()
      sprite()
    .wrapper
      width             48.5%
      fr()

    .avatarview
      sta()
      border            1px solid #000
      margin            2px 10px 0 0
      padding           0
      shadow            inset 0 0 0 1px rgba(255,255,255,.3)
      fl()

    .profile
      max-width         100px
      display           block
      overflow          hidden
      height            36px
      text-overflow     ellipsis
      white-space       nowrap
      padding-right     5px


  button
    width               78%
    margin-top          5px
    padding             9px 0
    max-width           170px
    &.loading
      color             rgba(255,255,255,.8)
      &:hover
        shadow          0 1px 0 rgba(255,255,255,0.23)

p.login-tip
  line-height           16px
  color                 white

.kdnotification.login
  span
    size                43px, 43px
    bg                  position, -480px -120px
    display             inline-block
    margin-right        5px
    vertical-align      middle
    sprite()

// .recovery
//   .kdnotification.mini
//     top                   33px!important

